- 🚧 Add extra data to Community Mission pages

Submitted to App Stores 2022-12-16

For more details on this update please visit the "What is New" page in the Apps or on the website