@@ -1,12 +1,8 @@
 import 'package:assistantapps_flutter_common/assistantapps_flutter_common.dart';
 import 'package:flutter/material.dart';
-import 'package:flutter_redux/flutter_redux.dart';
 
-import '../../components/appNotice.dart';
 import '../../components/responsiveGridView.dart';
 import '../../contracts/misc/customMenu.dart';
-import '../../contracts/redux/appState.dart';
-import '../../redux/modules/setting/whatIsNewSettingsViewModel.dart';
 import 'customHomepageComponents.dart';
 
 class ViewCustomHomepage extends StatelessWidget {
@@ -26,30 +22,8 @@ class ViewCustomHomepage extends StatelessWidget {
           numberOfColumns: _numberOfColumns,
         );
 
-    return StoreConnector<AppState, WhatIsNewSettingsViewModel>(
-      converter: (store) => WhatIsNewSettingsViewModel.fromStore(store),
-      builder: (storeContext, viewModel) => CachedFutureBuilder(
-        future: getAssistantAppsApi().getAppNotices(viewModel.selectedLanguage),
-        whileLoading: () => getLoading().fullPageLoading(context),
-        whenDoneLoading: (ResultWithValue<List<AppNoticeViewModel>> snapshot) {
-          if ( //
-              snapshot.hasFailed ||
-                  snapshot.value == null ||
-                  snapshot.value.isEmpty //
-              ) {
-            return renderGrid(context);
-          }
-
-          return SingleChildScrollView(
-            child: Column(
-              children: [
-                ...snapshot.value.map(appNoticeTile).toList(),
-                renderGrid(context),
-              ],
-            ),
-          );
-        },
-      ),
+    return AppNoticesWrapper(
+      child: renderGrid(context),
     );
   }
 }
