@@ -1,4 +1,6 @@
-- 🚧 Add extra data to Community Mission pages
+- 🚧 Add extra data to Community Mission pages (Github issue #160)
+- ⚡️ Improve loading of notices on homepages
+- 🐛 Fix black screen caused from changing homepage (Github issue #158)
 
 Submitted to App Stores 2022-12-16
 
